# scraper

./: README.md  config.py  pyproject.toml  requirements.txt  run.py
app/: __init__.py
app/controllers/: main.py  scraper.py
app/models/: __init__.py
app/services/: image_classifier.py  price_predictor.py  willhaben_scraper.py
app/static/css/: main.css
app/templates/: base.html  catalog.html  catalog_prediction.html  index.html  macros.html  prediction.html  products.html
tests/: conftest.py  test_image_classifier.py  test_models.py  test_predictor.py  test_routes.py  test_scraper.py
