[project]
name = "scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "flask>=3.1.3",
    "flask-sqlalchemy>=3.1.1",
    "lxml>=6.0.2",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "Pillow>=10.0.0",
    "pytest>=9.0.2",
    "pytest-flask>=1.3.0",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
]
